Commit index.html