@@ -14,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -34,7 +35,7 @@ public class PostService {
         titleMapper.insertTitle(titleObj);
 
         Content contentObj = new Content();
-        contentObj.setPostId(titleObj.getId());
+        contentObj.setPost_Id(titleObj.getId());
         contentObj.setContent(content);
         contentMapper.insertContent(contentObj);
     }
@@ -43,12 +44,25 @@ public class PostService {
         List<Title> titles = titleMapper.getAllTitles();
         List<Content> contents = contentMapper.getAllContents();
 
+        System.out.println("Titles: " + titles);
+        System.out.println("Contents: " + contents);
 
+        if (titles == null || contents == null) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to retrieve posts");
+        }
+
+        // Map postId -> content
         Map<Integer, String> contentMap = contents.stream()
-                .collect(Collectors.toMap(Content::getPostId, Content::getContent));
+                .collect(Collectors.toMap(Content::getPost_Id, Content::getContent, (existing, replacement) -> existing));
 
-        return titles.stream()
-                .map(t -> new Post(t.getId(), t.getTitle(), contentMap.get(t.getId())))
-                .collect(Collectors.toList());
+        System.out.println("Content Map: " + contentMap);
+
+        // Tạo danh sách Post
+        List<Post> posts = titles.stream()
+                .map(t -> new Post(t.getId(), t.getTitle(), contentMap.getOrDefault(t.getId(), "(No Content)")))
+                .toList();
+
+        System.out.println("Final Posts: " + posts);
+        return posts;
     }
 }
